--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "cboden/ratchet": "0.4.2",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
-        "react/react": "^1.0"
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
